--- a/components/tiptap/Editor.module.css
+++ b/components/tiptap/Editor.module.css
@@ -21,7 +21,7 @@
      flex: 1 1 auto;
      overflow-x: hidden;
      overflow-y: auto;
-     padding: 1.25rem 1rem;
+     padding: 0 3.82%;
      -webkit-overflow-scrolling: touch;
  }
 
@@ -55,3 +55,9 @@
     color: var(--color-sidebar-cell-text-color);
     cursor: pointer;
 }
+
+/*@media  (max-width: 500px)  {*/
+/*    .editorContent{*/
+/*        width:90%;*/
+/*    }*/
+/*}*/
