--- a/components/ui/card/ContentCard.module.css
+++ b/components/ui/card/ContentCard.module.css
@@ -2,3 +2,9 @@
     width: 78.6%;
     margin: 30px auto;
 }
+
+@media  (max-width: 500px)  {
+    .contentCard{
+        width:90%;
+    }
+}
