--- a/components/ui/card/top/TopBorder.module.css
+++ b/components/ui/card/top/TopBorder.module.css
@@ -3,7 +3,6 @@
     justify-content: space-between;
     flex-wrap: wrap;
     margin-top: 30px;
-    margin-bottom: 0;
 }
 
 @media (max-width: 590px) {
