--- a/components/ui/card/top/TopButton.module.css
+++ b/components/ui/card/top/TopButton.module.css
@@ -7,8 +7,9 @@
     padding: 0.5rem 1rem;
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
-    border: 0;
     text-transform: uppercase;
+    margin:0;
+    border:0;
 }
 
 .topButton.isActive{
@@ -16,19 +17,19 @@
     background: var(--color-sidebar-background-color);
 }
 
-.topButton.notActive:hover{
-    animation-name: animationFloat;
-    animation-duration: 1s;
-    animation-timing-function: ease-out;
-    animation-delay: 0s;
-    animation-direction: alternate;
-    animation-iteration-count: infinite;
-    animation-fill-mode: none;
-    animation-play-state: running;
-}
+/*.topButton.notActive:hover{*/
+/*    animation-name: animationFloat;*/
+/*    animation-duration: 1s;*/
+/*    animation-timing-function: ease-out;*/
+/*    animation-delay: 0s;*/
+/*    animation-direction: alternate;*/
+/*    animation-iteration-count: infinite;*/
+/*    animation-fill-mode: none;*/
+/*    animation-play-state: running;*/
+/*}*/
 
-@keyframes animationFloat {
-    0% { transform: translateY(0px); }
-    50% { transform: translateY(-5px); }
-    0% { transform: translateY(0px); }
-}
+/*@keyframes animationFloat {*/
+/*    0% { transform: translateY(0px); }*/
+/*    50% { transform: translateY(-5px); }*/
+/*    0% { transform: translateY(0px); }*/
+/*}*/
