--- a/components/ui/card/top/TopButtonDiv.module.css
+++ b/components/ui/card/top/TopButtonDiv.module.css
@@ -2,4 +2,7 @@
     margin: 0;
     border: 0;
     padding: 0;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: flex-end;
 }
