--- a/styles/globals.css
+++ b/styles/globals.css
@@ -101,6 +101,13 @@ body {
   --size-main-a1: 25rem;
   --size-main-a2: 12.3rem;
 
+  --size-fibonacci-1:23.6%;
+  --size-fibonacci-2:38.2%;
+  --size-fibonacci-3:61.8%;
+  --size-fibonacci-4:78.6%;
+
+
+
   margin: 0;
   background-color: var(--color-background-text-color);
   color: var(--color-base-text-color);
@@ -151,7 +158,7 @@ button {
 .ProseMirror{
   background: var(--color-base-background-color);
   border-radius: 8px;
-  padding: 5px 15px;
+  padding: 15px 0;
   color: var(--color-text-color);
   font-size: 16px;
   line-height: 27px;
@@ -225,6 +232,7 @@ button {
 .ProseMirror h6 {
   line-height: 1;
   color: var(--color-title-text-color);
+  margin: 10px 0;
 }
 
 .ProseMirror code {
